--- a/.github/workflows/02-trigger-push.yml
+++ b/.github/workflows/02-trigger-push.yml
@@ -3,13 +3,22 @@ name: 02. trigger push
 on:
   push: # push했을 때 구동
     branches:
-      # - "**" # 모든 브랜치 (default)
-      - "main"
+      - "**" # 모든 브랜치 (default)
+      # - "main"
+
 
 jobs:
   echo:
     runs-on: ubuntu-latest
     steps:
-      - name: 푸시 시 메시지 출력
+      # - name: 푸시 시 메시지 출력
         # run: echo "push가 감지되었습니다"
+        # run: echo "push가 감지되었습니다 (${{github.ref_name}})"
+      - name: 브랜치 이름 출력
+        run: "현재 푸시 된 브랜치 명 : (${{github.ref_name}})"
+      - name: 메인 브랜치 감지
+        if: ${{ github.ref_name == 'main' }}
         run: echo "push가 감지되었습니다 (${{github.ref_name}})"
+      - name: 메인 외 브랜치 감지
+        if: ${{ github.ref_name != 'main' }}
+        run: echo "메인이 아닌 브랜치에 대한 푸시입니다"
